<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/tv_info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/bt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="@string/bt_signup"
        android:textColor="@android:color/white" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/bt_signup"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/padding_between"
        android:background="#C8C9CB" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/cb_keepme_signed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:checked="false"
        android:text="@string/cb_keepme_signedin" />

    <TextView
        android:id="@+id/tv_cantaccess_youraccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_below="@+id/cb_keepme_signed"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/tv_cantaccess_youraccount"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/bt_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="@string/bt_signin"
        android:textColor="@android:color/white" />

</RelativeLayout>